k8s/hello-world.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ald-
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  namespace: demo
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: vossccp/nodejs-hello-world
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: hello-world
